# liteplayer_android

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/liteplayerdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  liteplayer-jni.cpp  native-lib.cpp
app/src/main/java/com/example/liteplayerdemo/: Liteplayer.java  MainActivity.java
app/src/test/java/com/example/liteplayerdemo/: ExampleUnitTest.java
example/: build.gradle
example/src/main/: AndroidManifest.xml
example/src/main/java/com/example/liteplayerdemo/: MainActivity.java
